Working on menuscreen

--- a/Platformer/Platformer.csproj
+++ b/Platformer/Platformer.csproj
@@ -37,6 +37,7 @@
   <ItemGroup>
     <Compile Include="AnimatedSprite.cs" />
     <Compile Include="Boss.cs" />
+    <Compile Include="Button.cs" />
     <Compile Include="CharacterManager.cs" />
     <Compile Include="InversionManager.cs" />
     <Compile Include="Invertible.cs" />
@@ -44,6 +45,7 @@
     <Compile Include="Enemy.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="LevelManager.cs" />
+    <Compile Include="MenuScreen.cs" />
     <Compile Include="MovementPattern.cs" />
     <Compile Include="Obstacle.cs" />
     <Compile Include="PlatformerMain.cs" />
@@ -51,6 +53,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Projectile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Screen.cs" />
     <Compile Include="Sprite.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -113,6 +116,11 @@
     <Content Include="wrap_oal.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Content\MenuFont.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <!-- Specify the search path explicitly so the ResolveAssemblyReferences task picks the right ones -->
   <Target Name="BeforeResolveReferences">
