--- a/Platformer/Platformer.csproj
+++ b/Platformer/Platformer.csproj
@@ -37,7 +37,6 @@
   <ItemGroup>
     <Compile Include="AnimatedSprite.cs" />
     <Compile Include="Boss.cs" />
-    <Compile Include="Button.cs" />
     <Compile Include="CharacterManager.cs" />
     <Compile Include="InversionManager.cs" />
     <Compile Include="Invertible.cs" />
@@ -45,6 +44,7 @@
     <Compile Include="Enemy.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="LevelManager.cs" />
+    <Compile Include="MenuItem.cs" />
     <Compile Include="MenuScreen.cs" />
     <Compile Include="MovementPattern.cs" />
     <Compile Include="Obstacle.cs" />
