Added loading enemies for different levels and made boss appear at right time.

--- a/Platformer/The_Negative_One.csproj
+++ b/Platformer/The_Negative_One.csproj
@@ -134,7 +134,7 @@
     <Content Include="Content\Web projectile_i.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <None Include="Content\Enemies.txt">
+    <None Include="Content\Enemies1.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <Content Include="Icon.ico" />
