--- a/Platformer/The_Negative_One.csproj
+++ b/Platformer/The_Negative_One.csproj
@@ -98,13 +98,13 @@
     <Content Include="Content\background_i.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\butterfly_i.png">
+    <Content Include="Content\butterfly_gray_spritesheet.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\butterfly.png">
+    <Content Include="Content\butterfly_i_spritesheet.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\butterfly_gray.png">
+    <Content Include="Content\butterfly_spritesheet.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\door.png">
@@ -155,9 +155,6 @@
     <None Include="Content\test.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <Content Include="Content\Victory.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
     <Content Include="Content\Web projectile.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
