--- a/Platformer/The_Negative_One.csproj
+++ b/Platformer/The_Negative_One.csproj
@@ -39,6 +39,7 @@
     <Compile Include="Boss.cs" />
     <Compile Include="CharacterManager.cs" />
     <Compile Include="Door.cs" />
+    <Compile Include="GameWindowExtensions.cs" />
     <Compile Include="InversionManager.cs" />
     <Compile Include="Invertible.cs" />
     <Compile Include="Controls.cs" />
@@ -128,7 +129,7 @@
     <Content Include="Content\healing_item.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Level0.txt">
+    <Content Include="Content\Level0.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\neggy_spritesheet.png">
@@ -168,13 +169,13 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <Content Include="Icon.ico" />
-    <Content Include="Level1.txt">
+    <Content Include="Content\Level1.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Level2.txt">
+    <Content Include="Content\Level2.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Level3.txt">
+    <Content Include="Content\Level3.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="OpenAL32.dll">
