Add menu screen neggy asset

--- a/Platformer/The_Negative_One.csproj
+++ b/Platformer/The_Negative_One.csproj
@@ -132,6 +132,9 @@
     <Content Include="Content\healing_item.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\neggy_menuscreen.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\twin_black.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
